--- a/app/templates/home/dashboard.html
+++ b/app/templates/home/dashboard.html
@@ -622,7 +622,7 @@ html.dark .coming-soon-section {
             </a>
 
             <!-- Thumbnail -->
-            <a href="{{ url_for('thumbnail.thumbnail') }}" class="feature-card" onclick="return BaseApp.checkGuestAccess(event, this)">
+            <a href="{{ url_for('thumbnail.index') }}" class="feature-card" onclick="return BaseApp.checkGuestAccess(event, this)">
                 <div class="feature-content">
                     <h3><i class="ph ph-image feature-icon-inline"></i>Thumbnails</h3>
                     <p>Design thumbnails that get clicks</p>
