--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -198,17 +198,17 @@
         flex-shrink: 0;
         display: flex;
         align-items: center;
-        justify-content: flex-start;
-        height: 80px;
+        justify-content: center;
+        height: 60px;
     }
     
     .logo-section img {
-        height: 200px;
+        height: 60px;
         width: auto;
         display: block;
         object-fit: contain;
         transition: all 0.2s ease;
-        margin-left: -8px;
+        margin-left: -6px;
     }
     
     .logo-section img:hover {
