--- a/app/templates/video_title/index.html
+++ b/app/templates/video_title/index.html
@@ -1,6 +1,11 @@
 {% extends "base.html" %}
 
-{% block title %}Video Title Generator - Creaver{% endblock %}
+{% block seo_meta %}
+<meta name="description" content="Generate viral YouTube video titles with AI. Create click-worthy titles that boost views and engagement. Professional title optimization made easy with Creatrics AI.">
+<meta name="keywords" content="AI video title generator, YouTube title creator, viral video titles, SEO video titles, content optimization">
+{% endblock %}
+
+{% block title %}AI Video Title Generator - Create Viral YouTube Titles | Creatrics{% endblock %}
 
 {% block additional_styles %}
 <style>
